# snail_mail_parser

./: .gitignore  llm.py  main.py  navigator.py  ocr.py  output.py  processor.py  pyproject.toml  qr.py  readme.md  requirements.txt  settings.py  watcher.py  web_api.py
templates/: facsimile_viewer.html
