[project]
name = "snail-mail-parser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "jinja2>=3.0",
    "markdown-it-py>=3.0.0",
    "openai>=1.82.0",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "qreader>=3.16",
    "uvicorn[standard]>=0.34.2",
    "watchdog>=6.0.0",
]
